条件装配bug修复

--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <!-- Json 工具 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.30</version>
+        </dependency>
     </dependencies>
 
 </project>
