--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>springboot-rest</module>
         <module>spring-servlet</module>
         <module>spring-boot-servlet</module>
+        <module>spring-reactive</module>
     </modules>
     <packaging>pom</packaging>
 
