--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.30</version>
         </dependency>
+
+        <!-- logback配置 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
