--- a/spring-webmvc/src/main/webapp/WEB-INF/web.xml
+++ b/spring-webmvc/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,12 @@
         <!--<url-pattern>/</url-pattern>-->
     <!--</servlet-mapping>-->
 
+    <!-- JDBC DataSources (java:comp/env/jdbc) -->
+    <resource-ref>
+        <description>The default DS</description>
+        <res-ref-name>jdbc/sxsDB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
